--- a/docs/scss/base/_base.scss
+++ b/docs/scss/base/_base.scss
@@ -22,6 +22,7 @@ body {
 
 .maket-page-wrapper {
     overflow-x: hidden;
+    position: relative;
 }
 
 section {
